C:\Users\Paola_2\lessons\assignment-1\index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
   <body>
   <div id="target-div"></div>
   <script src="index.js" type="text/javascript"></script>
+	<div class="content-container">
+		<h1>Assignment 1</h1>
+		<p>I am most excited to learn in an envirnment that facilitates collaberation.  The other online classes I have taken, peers are inaccessible.  In the long run, that fosters imposter syndrome because everybody else feels so far ahead.  I am also excited to start new projects and work on my weaknesses.</p>
+	</div>
   </body>
 </html>
